Don't throw from attribute sets if we can't find a script global to compile anevent handler attribute on.  This happens; just don't compile it.  Bug 379120,r+sr=peterv